# web-crawler

./: Cargo.toml
src/: crawler.rs  data_store.rs  dependencies.rs  fetch.rs  lib.rs  main.rs  parser.rs  url.rs  url_frontier.rs
