[package]
name = "url-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
clap = { version = "4.4.16", features = ["derive"] }
crossbeam-queue = "0.3.11"
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
wiremock = "0.5"
